--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
     "recommendations": [
-        "biomejs.biome"
+        "biomejs.biome",
+        "yzhang.markdown-all-in-one",
+        "esbenp.prettier-vscode"
     ]
 }
