--- a/biome.jsonc
+++ b/biome.jsonc
@@ -5,11 +5,8 @@
 	"files": {
 		"include": [
 			"**/*.js",
-			"**/*.jsx",
-			"**/*.ts",
-			"**/*.tsx",
-			"**/*.css",
-			"**/*.scss"
+			"**/*.json",
+			"**/*.jsonc"
 		]
 	},
 
