--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
+	"name": "SafeMail",
 	"manifest_version": 3,
-	"name": "CustomStyles",
 	"version": "1.0",
 	"permissions": ["activeTab", "scripting"],
 	"background": {
@@ -8,7 +8,7 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["https://*/*"], // Load script on all files.
+			"matches": ["https://*/*"], // Load script on all sites.
 			"js": ["content.js"] // Javascript that injects custom styling.
 		}
 	],
