--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0",
 	"permissions": ["activeTab", "scripting"],
 	"background": {
-		"service_worker": "background.js"
+		"scripts": ["background.js"]
 	},
 	"content_scripts": [
 		{
